# tx2_whole_image_desc_server

./: .gitignore  CMakeLists.ros.txt  CMakeLists.txt  README.md  package.xml
launch/: py3_tf_server.launch  py3_tf_server_mynteye.launch  py3_tf_server_realsense.launch
src_tensorrt_example/: TFRTEngine.cpp  hello.cpp  mnist_uff.cpp
standalone/: CMakeLists.txt  README.md  bare_mnist.cpp  common.cpp  common.h  image_desc_try.cpp  imagenet.cpp  sampleUffMNIST.cpp
standalone/data/: dog.pgm  lenet5.uff  lenet5.uff.txt
standalone/uff_ready/: output_model.pb  output_model.pbtxt  output_model.uff  output_nvinfer.pbtxt  output_nvinfer.uff
tx2_py3_tfserver/: README.md  py3_whole_image_desc_compute_client.py  py3_whole_image_desc_server.py  py3_whole_image_desc_server_pb.py
tx2_py3_tfserver/models.keras/June2019/: try.py
tx2_py3_tfserver/models.keras/June2019/centeredinput-m1to1-240x320x1__mobilenetv2-block_9_add__K16__allpairloss/: modelarch_and_weights.2000.480x640x1.h5  modelarch_and_weights.2000.480x640x1.pb  modelarch_and_weights.2000.480x640x1.pb.pbtxt
tx2_py3_tfserver/models.keras/June2019/centeredinput-m1to1-240x320x3__mobilenetv2-block_9_add__K16__allpairloss/: model.json  modelarch_and_weights.800.480x640x3.h5  modelarch_and_weights.800.480x640x3.pb  modelarch_and_weights.800.480x640x3.pb.pbtxt  modelarch_and_weights.800.480x752x3.h5  modelarch_and_weights.800.480x752x3.pb  modelarch_and_weights.800.480x752x3.pb.pbtxt  modelarch_and_weights.800.512x640x3.h5  modelarch_and_weights.800.512x640x3.pb  modelarch_and_weights.800.512x640x3.pb.pbtxt  modelarch_and_weights.800.600x960x3.h5  modelarch_and_weights.800.600x960x3.pb  modelarch_and_weights.800.600x960x3.pb.pbtxt  try.py
tx2_src/: README.md  desc_server.cpp  whole_image_desc_compute_client.py
tx2_tensorrt_src/: common.cpp  desc_server.cpp
